Open in new tab

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div class="logo">
-    <a id="linkedin" href="https://www.linkedin.com/in/ivan-koltsov-3016763a"></a>
-    <a id="calendly" href="https://calendly.com/kreejob/15min"></a>
+    <a id="linkedin" target="_blank" href="https://www.linkedin.com/in/ivan-koltsov-3016763a"></a>
+    <a id="calendly" target="_blank" href="https://calendly.com/kreejob/15min"></a>
   </div>
 </body>
 </html>
